--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -1,5 +1,3 @@
-/* Home.css - Versión Profesional Renovada */
-
 .home-container {
     background-color: #e0d6d1;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -9,7 +7,6 @@
     align-items: center;
 }
 
-/* --- HEADER / HERO SECTION --- */
 .home-header {
     width: 90%;
     max-width: 1200px;
@@ -60,7 +57,7 @@
     font-size: 0.95rem;
 }
 
-/* --- SECCIÓN DE PROYECTOS (CARDS) --- */
+/* SECCIÓN DE PROYECTOS  */
 .home-section {
     width: 90%;
     max-width: 1200px;
@@ -85,7 +82,6 @@
 
 .home-card {
     background-color: #ffffff;
-    /* Borde sutil */
     border: 1px solid rgba(190, 171, 161, 0.2);
     border-radius: 25px;
     width: 320px;
@@ -121,7 +117,6 @@
     line-height: 1.5;
 }
 
-/* --- FOOTER MODERNO --- */
 .home-footer {
     width: 100%;
     background-color: #ffffff;
